--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="결과"
-        android:textSize="40dp"
+        android:textSize="30dp"
         android:textStyle="bold" />
 
     <TextView
@@ -20,25 +20,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textSize="25dp"
+        android:textSize="40dp"
         android:text="3/10"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="조금 더 분발하세요!"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+
 
 
     <ImageView
-        android:id="@+id/one"
+        android:id="@+id/good"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/one" />
+        android:src="@drawable/good" />
 
 
     <Button
