--- a/app/src/main/res/layout/activity_game_rules.xml
+++ b/app/src/main/res/layout/activity_game_rules.xml
@@ -14,7 +14,10 @@
         android:layout_marginTop="16sp"
         android:layout_marginRight="16sp"
         android:layout_marginBottom="16dp"
+        android:gravity="center"
         android:text="@string/game_rules"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/closeBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
